--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "prepare": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "5.13.0",
     "next": "16.0.0",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "@prisma/client": "5.13.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "prisma": "5.13.0",
     "@tailwindcss/postcss": "^4.1.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "prisma": "5.13.0",
     "tailwindcss": "^4.1.15",
     "typescript": "^5"
   }
