--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-next": "16.0.0",
     "prisma": "5.13.0",
     "tailwindcss": "^4.1.15",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^0.34.6"
   }
 }
